Add e2e tests for parent and child endpoints

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,2 +1,13 @@
 parent.data.location = classpath:static/json/Parent.json
 child.data.location = classpath:static/json/Child.json
+parent.response.ok = classpath:static/json/OkResponseForAllParent.json
+child.response.ok = classpath:static/json/OkResponseForAllChildrenOfParent.json
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:transactiondb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+server.port=7777
